# travelMate

./: README.md
backend/: .env.example  README.md  architecture.md  pyproject.toml  sampleResponseApi.json
backend/app/: main.py
backend/app/api/routes/: planner.py  routes_direct.py  stt.py
backend/app/clients/: gemini.py  maps.py
backend/app/core/: config.py
backend/app/models/: planning.py
backend/app/services/: completeness.py  elevenlabs_tts.py  memory.py  optimizer.py  planner.py  query_builder.py
backend/app/workflows/: planner_graph.py
backend/tests/: test_feasibility_and_memory.py  test_gemini_normalization.py  test_routes_transit_details.py
docs/: tripmind-hackathon-plan.md
frontend/: .gitignore  README.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuthGate.tsx  AuthScreen.tsx  BlogPostContent.tsx  BlogPostPage.tsx  BlogRightPane.tsx  CenterPanel.tsx  DayImageGallery.tsx  ElevenLabsConcierge.tsx  ElevenLabsVoiceWidget.tsx  Icons.tsx  ItineraryCard.tsx  LeftPanel.tsx  RightPanel.tsx
frontend/data/blogs/: japan.txt  tokyo.json  vegas.json  vegas.txt  vermount.json  (+1 more)
frontend/docs/: API_INTEGRATION.md  ARCHITECTURE.md  COMPONENTS.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  ERROR_RESOLUTION.md  FILE_STRUCTURE.md  GETTING_STARTED.md  INDEX.md  SETUP_AND_BUILD.md  STATE_MANAGEMENT.md  STYLING_GUIDE.md
frontend/lib/: auth0Management.ts  blogData.ts  plannerApi.ts  tripmindMetadata.ts  utils.ts
frontend/store/: appStore.ts  authStore.ts
(+7 files in other folders)
